<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp">


        <androidx.cardview.widget.CardView
                android:id="@+id/img_cart_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginHorizontal="12dp"
                android:layout_marginTop="12dp"
                android:elevation="1dp"
                app:cardCornerRadius="11dp"
                app:cardElevation="15dp"
                android:paddingBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintHorizontal_bias="0.0">

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <TextView
                        android:id="@+id/txt_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_00_00_0000"
                        android:layout_marginEnd="4dp"
                        android:layout_marginTop="6dp"
                        app:layout_constraintEnd_toStartOf="@id/txt_time"
                        app:layout_constraintTop_toTopOf="parent" />

                <TextView
                        android:id="@+id/txt_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_00_00"
                        android:layout_marginEnd="10dp"
                        android:layout_marginTop="6dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                <TextView
                        android:id="@+id/txt_item"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/item"
                        android:layout_marginTop="14dp"
                        android:textStyle="bold"
                        android:layout_marginStart="12dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                <TextView
                        android:id="@+id/txt_item_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="14dp"
                        android:layout_marginStart="2dp"
                        app:layout_constraintStart_toEndOf="@id/txt_item"
                        app:layout_constraintTop_toTopOf="parent" />

                <TextView
                        android:id="@+id/txt_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/price"
                        android:textStyle="bold"
                        android:layout_marginTop="6dp"
                        android:layout_marginStart="12dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/txt_item" />

                <TextView
                        android:id="@+id/txt_item_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:layout_marginStart="2dp"
                        app:layout_constraintStart_toEndOf="@id/txt_price"
                        app:layout_constraintTop_toBottomOf="@id/txt_item_name" />

                <TextView
                        android:id="@+id/txt_paidby"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/paid_by"
                        android:layout_marginTop="6dp"
                        android:layout_marginStart="12dp"
                        android:textStyle="bold"
                        android:layout_marginBottom="8dp"
                        android:paddingBottom="8dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/txt_price" />

                <TextView
                        android:id="@+id/txt_item_paidby"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:layout_marginStart="2dp"
                        app:layout_constraintStart_toEndOf="@id/txt_paidby"
                        app:layout_constraintTop_toBottomOf="@id/txt_item_price" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>